@@ -1,0 +1,3 @@
+# Cargo Ships
+[bvs-stats]
+waterways=Waterways
