@@ -4,6 +4,7 @@ Date: ??.01.2024
   Changes:
     - Compatible mods can now force the victory, even if it has been reached before.
     - More consistent and safer formatting of numbers. Now with working unit tests.
+    - Add some Cargo Ships statistics.
 ---------------------------------------------------------------------------------------------------
 Version: 0.2.7
 Date: 11.01.2024
